unpackaged/main/default/objects/Framework__Fonteva_Language__c/Framework__Fonteva_Language__c.object-meta.xml
<CustomObject>
    <label>Fonteva Language</label>
    <nameField>
        <label>Fonteva Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fonteva Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>