unpackaged/main/default/objects/Framework__Fonteva_Language__c/fields/Framework__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Framework__Display_Name__c</fullName>
    <description>The text that displays in the language picker in the community for this language</description>
    <inlineHelpText>The text that displays in the language picker in the community for this language</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>