unpackaged/main/default/objects/Framework__Fonteva_Language__c/fields/Framework__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Framework__Display_Order__c</fullName>
    <description>Controls the display order for the language picker.</description>
    <inlineHelpText>Controls the display order for the language picker.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>