unpackaged/main/default/objects/Framework__Fonteva_Language__c/fields/Framework__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Framework__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, language will be a selectable in the community</description>
    <inlineHelpText>When checked, language will be a selectable in the community</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>