unpackaged/main/default/objects/Framework__Fonteva_Language__c/fields/Framework__Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Framework__Language_Code__c</fullName>
    <description>Read only - Language Code</description>
    <inlineHelpText>Read only - Language Code</inlineHelpText>
    <label>Language Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>